z-index fixed for mNavbar

--- a/src/layout/navbarMobile/navbarMobile.scss
+++ b/src/layout/navbarMobile/navbarMobile.scss
@@ -2,6 +2,8 @@
 
 .navbarMobile{
     background: $grey-0;
+
+    z-index: 500;
     
     position: fixed;
     width: calc(100vw - 4rem);
